[package]
name = "zenlink-protocol-rpc"
version = "0.2.0"
authors = ["Zenlink Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies]
serde = { version = "1.0.119", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"

# Substrate packages

sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

# Local packages

zenlink-protocol = { path = "..", default-features = false }
zenlink-protocol-runtime-api = { path = "./runtime-api", default-features = false }
