[package]
name = "zenlink-protocol-rpc"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "GPL-3.0-only"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies]
serde = { version = "1.0.119", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

# Substrate packages

sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }

# Local packages

zenlink-protocol = { path = "..", version = "0.4.0"}
zenlink-protocol-runtime-api = { path = "./runtime-api", version = "0.4.0"}
