[package]
name = "zenlink-stable-amm-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.119", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2" }

jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }


sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }

zenlink-stable-amm-runtime-api = { path = "./runtime-api", version = "0.1.0"}
