[package]
name = "stable-amm-runtime-api"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
stable-amm = { path = '../..', default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "sp-api/std",
    "sp-runtime/std",
    "stable-amm/std",
]
