[package]
name = "zenlink-protocol-runtime-api"
version = "0.1.0"
authors = ["Zenlink Developers"]
edition = "2018"

[dependencies]
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

zenlink-protocol = { path = '../..', default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'zenlink-protocol/std'
]
