[package]
name = "zenlink-protocol-runtime-api"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }

zenlink-protocol = { path = '../..', default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'zenlink-protocol/std'
]
